Assessment3/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway

metadata:
  name: company-gateway

spec:

  gatewayClassName: envoy

  listeners:

    - name: https

      protocol: HTTPS

      port: 443

      hostname: "*.company.local"

      tls:

        mode: Terminate

        certificateRefs:

          - kind: Secret

            name: company-tls-secret

      allowedRoutes:

        namespaces:

          from: Same
